--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,24 @@
-
+server:
+  port: 9090
+spring:
+  # mybatis
+  datasource:
+    url: jdbc:mysql://localhost:3306/repository?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: mysql8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  # redis
+  redis:
+    host: www.xtijie.top
+    port: 6379
+    password: 123456
+    lettuce:
+      pool:
+        max-active: 10
+        max-idle: 10
+        min-idle: 1
+        time-between-eviction-runs: 10s
+mybatis:
+  mapper-locations: classpath:dao/*.xml
+  configuration:
+    map-underscore-to-camel-case: true # ????
